--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "next": "10.0.1",
+    "next-images": "^1.6.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^3.11.0",
     "sass": "^1.29.0"
   }
 }
