--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "next": "10.0.1",
     "next-images": "^1.6.2",
