--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "copy-to-clipboard": "^3.3.1",
     "next": "10.0.1",
     "next-images": "^1.6.2",
     "react": "17.0.1",
