--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.3.1",
